--- a/frontend/components/menu.css
+++ b/frontend/components/menu.css
@@ -1,10 +1,3 @@
-/* Navbar */
-#navbar
-{
-  z-index: 1;
-  background-color: var(--back-color);
-} 
-
 /* Menu */
 #menu
 {  
@@ -82,8 +75,6 @@
   top: 50px;
   right: 0;
   
-  background-color: var(--back-color);
-
   transform: translate(100%, 0);
   opacity: 0;
 }
